force-app/main/default/objects/ERP_Replacement_Order__c/ERP_Replacement_Order__c.object-meta.xml
<CustomObject>
    <label>ERP Replacement Order</label>
    <nameField>
        <displayFormat>SF-RO-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP Replacement Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>