force-app/main/default/objects/ERP_Replacement_Order__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <label>Address 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>