force-app/main/default/objects/ERP_Replacement_Order__c/fields/Addressee__c.field-meta.xml
<CustomField>
    <fullName>Addressee__c</fullName>
    <label>Addressee</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>