force-app/main/default/objects/ERP_Replacement_Order__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>ERP Replacement Orders</relationshipLabel>
    <relationshipName>ERP_Replacement_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>