force-app/main/default/objects/ERP_Replacement_Order__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>ERP Replacement Orders</relationshipLabel>
    <relationshipName>ERP_Replacement_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>