force-app/main/default/objects/ERP_Replacement_Order__c/fields/ERP_Customer__c.field-meta.xml
<CustomField>
    <fullName>ERP_Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ERP Customer</label>
    <referenceTo>ERP_Customer__c</referenceTo>
    <relationshipLabel>ERP Replacement Orders</relationshipLabel>
    <relationshipName>ERP_Replacement_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>