force-app/main/default/objects/ERP_Replacement_Order__c/fields/ERP_SO_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_SO_ID__c</fullName>
    <label>ERP SO ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>