force-app/main/default/objects/ERP_Replacement_Order__c/fields/ERP_SO_Link__c.field-meta.xml
<CustomField>
    <fullName>ERP_SO_Link__c</fullName>
    <formula>IF(ISNULL(ERP_SO_ID__c) , &quot;&quot;, (&quot;https://5624281-sb1.app.netsuite.com/app/accounting/transactions/salesord.nl?id=&quot; &amp;  ERP_SO_ID__c  ))</formula>
    <label>ERP SO Link</label>
    <type>Text</type>
</CustomField>