force-app/main/default/objects/ERP_Replacement_Order__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>ERP Replacement Orders</relationshipLabel>
    <relationshipName>ERP_Replacement_Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>