force-app/main/default/objects/ERP_Replacement_Order__c/fields/Order_Memo__c.field-meta.xml
<CustomField>
    <fullName>Order_Memo__c</fullName>
    <label>Order Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>