force-app/main/default/objects/ERP_Replacement_Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <defaultValue>(&quot;NEW&quot;)</defaultValue>
    <label>Order Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>ACCEPTED</fullName>
            </value>
            <value>
                <fullName>FULFILLED</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>CANCELLED</fullName>
            </value>
            <value>
                <fullName>DRAFT</fullName>
                <default>true</default>
                <label>DRAFT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>