force-app/main/default/objects/ERP_Replacement_Order__c/fields/Replacement_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Order_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Replacement Order Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>