force-app/main/default/objects/ERP_Replacement_Order__c/fields/Replacement_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Ship_Date__c</fullName>
    <label>Replacement Ship Date</label>
    <type>Date</type>
</CustomField>