force-app/main/default/objects/ERP_Replacement_Order__c/fields/Rush_Order__c.field-meta.xml
<CustomField>
    <fullName>Rush_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rush Order</label>
    <type>Checkbox</type>
</CustomField>