force-app/main/default/objects/ERP_Replacement_Order__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Subsidiary</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>ERP Replacement Orders</relationshipLabel>
    <relationshipName>ERP_Replacement_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>